@@ -729,7 +729,8 @@ int command_ok_for_model (int test_ci, int model_ci)
     case ADDTO:
     case OMIT:
     case OMITFROM:
-    case COEFFSUM:	
+    case COEFFSUM:
+    case VIF:
 	if (model_ci == TSLS || model_ci == NLS || 
 	    model_ci == ARMA || model_ci == GARCH) ok = 0;
 	break;
